SERVER-19806 validate nToSkip and nToReturn when upconverting pseudocommands in MongoD