jstests/core/pseudocommand_db.js
@@ -1,7 +1,9 @@
 (function() {
     "use strict";
-    var testDB = db.getSiblingDB("blah");
-    // test that we can run the 'inprog' pseudocommand on any database.
-    assert.commandWorked(testDB.$cmd.sys.inprog.findOne());
+    if (db.getMongo().readMode() == "compatibility") {
+        var testDB = db.getSiblingDB("blah");
+        // test that we can run the 'inprog' pseudocommand on any database.
+        assert.commandWorked(testDB.$cmd.sys.inprog.findOne());
+    }
 
 })();
